devscripts (2.16.9) UNRELEASED; urgency=medium

  * debsnap:
    + Fix "no binaries for given arch" detection so it doesn't download
      binaries for unspecified archs.  (Closes: #839533)
    + Add handling for the --version switch, as advertised by --help.
      (Closes: #839537)
  * bts:
    + Switch to Net::SMTPS to support STARTTLS.  Based on a patch by Andrew
      Shadura.  (Closes: #518622)

 -- James McCoy <jamessan@debian.org>  Sat, 01 Oct 2016 13:26:57 -0400

devscripts (2.16.8) unstable; urgency=medium

  [ Paul Wise ]
  * Add some more Debian development & QA tools to Suggests:
    adequate autopkgtest bls-standalone check-all-the-things
    duck how-can-i-help piuparts ratt

  [ Antonio Terceiro ]
  * New script: debrepro, a simple reproducibility tester specific for Debian
    packages.  (Closes: #786755)

  [ James McCoy ]
  * deb-reversion: Update md5sum of changelog if it's changed.  (Closes:
    #836725)
  * Change Getopt::Long configuration to disable gnu_compat so an '=' isn't
    required for optional arguments (e.g. "dch --news=").
  * chdist:
    + Silence warnings about uninitialized values.  Thanks to Christoph Biedl
      for the patch.  (Closes: #838185)
    + For compare-bin-packages, use the newest version of a package if
      multiple versions exist.  Thanks to Christoph Biedl for the patch.
      (Closes: #838184)

 -- James McCoy <jamessan@debian.org>  Fri, 30 Sep 2016 22:17:07 -0400

devscripts (2.16.7) unstable; urgency=medium

  [ Paul Wise ]
  * grep-excuses:
    + Fix the script for the removal of testing.pl from release.debian.org
  * dscverify:
    + Fix bash completion of the --no-conf option
  * uscan:
    + Strip whitespace from hrefs before processing (Closes: #833779)
    + Debug mode: print hrefs before checking them
  * Suggest reprotest for reproducible builds testing (Closes: #786755)

  [ Jakub Wilk ]
  * wnpp-alert:
    + Use HTTPS.

  [ Salvatore Bonaccorso ]
  * debchange: Add support for buster and bullseye